--- a/www/cuanti.css
+++ b/www/cuanti.css
@@ -1,15 +1,18 @@
-th{
+.th{
   padding-right: 10px;
   padding-left: 10px;
 } 
-logo{
-  max-height: 50%;
-  max-width: 50%;
+.logo{
+  height: 95%;
+  object-fit: scale-down;
 }
-barraPie{
-  height: 150px;
-  padding: 8px; 
-  border-bottom: 1px 
-  solid #CCC; 
+.barraPie{
   background: #FFFFEE; 
+  padding: 8px; 
+  border-bottom: 1px solid #CCC; 
+  height: 75px;
+  line-height: 75px;
+  text-align: center;
+}
+.spanner{
 }
