cambios fondos y columnas

--- a/www/cuanti.css
+++ b/www/cuanti.css
@@ -1,3 +1,7 @@
+/*Nuevos ajustes Yose*/
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 th {
   padding-right: 10px;
   padding-left: 10px;
@@ -7,9 +11,103 @@ th {
   height: 95%;
 }
 .barraPie {
-  background: #FFFFEE; 
+  /*background: #FFFFEE; 
   border-bottom: 1px solid #CCC; 
   height: 75px;
   line-height: 75px;
+  text-align: center;*/
+  border-top: 1px solid #CCC;
+  height: 100px;
+  line-height: 75px;
   text-align: center;
+	font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 60px;
+  padding-top: 20px;
+}
+
+
+body {
+	font-family: "Roboto", sans-serif !important;
+	background-image: url(https://i.ibb.co/CHZLyFH/Recurso-33.png);
+  background-repeat: no-repeat;
+  background-position-x: 830px;
+  background-size: 30%;
+  background-position-y: 90px;
+
+}
+
+a {
+  color: #000 !important;
+}
+
+a:focus, a:hover {
+  color: #6446fa !important;
+}
+
+
+.h1 {
+  margin-top: 30px !important;
+  margin-bottom: 30px !important;
+
+}
+
+h1 {
+  font-family: "Roboto", sans-serif !important;
+}
+
+.well {
+  background-color: #e7e6ff !important;
+	border-radius: 15px !important;
+	border: 2px solid #8c7ddc !important;
+	margin-left: 10px !important; 
+  }
+
+
+.nav-tabs {
+  margin-bottom: 30px !important;
+}
+
+.nav > li > a:focus, .nav > li > a:hover {
+  background-color: #e7e6ff !important;
+  font-weight: bold !important;
+}
+
+.nav > li > a:hover, .nav > li > a:focus {
+  outline: none 1px #000;
+}
+
+
+.container-fluid {
+  width: 85%;
+	padding-top: 50px;
+}
+.container-fluid::before {
+  background-image: url(https://psico.edu.uy/themes/custom/hemet/logo-m.png);
+  background-repeat: no-repeat;
+  background-position: left top;
+  height: 60px;
+  width: 100%;
+  background-size: 25%;
+}
+
+.irs--shiny .irs-bar {
+   border-top: 1px solid #9bfa82  !important;
+  border-bottom: 1px solid #9bfa82  !important;
+  background: #9bfa82  !important;
+}
+.irs--shiny .irs-from, .irs--shiny .irs-to, .irs--shiny .irs-single {
+  background-color: #6446fa !important;
+}
+
+.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
+  border-top: 1px solid #8c7ddc;
+}
+
+.table > thead > tr > th {
+  border-bottom: 2px solid #8c7ddc;
+}
+
+ol, ul {
+  margin-top: 30px !important;
 }
